ic-canister/ic-canister-macros/tests/export_candid/not_expended/invalid_return_type.stderr
error: `#[export_candid]` function must return `String`
 --> tests/export_candid/not_expended/invalid_return_type.rs:4:13
  |
4 | fn did() -> () {}
  |             ^^
